--- a/creeper.html
+++ b/creeper.html
@@ -1,3 +1,10 @@
+<!-- Descrição:
+Retângulo 1: 350, 300 (cabeça).
+Retângulos 2 e 3: 90, 90 (olhos).
+Retângulo 4: 70, 100 (nariz).
+Retângulos 5 e 6: 40, 110 (parte da boca).
+O seu canvas deve ter o tamanho de 600 x 400 pixels. -->
+
 <meta charset="utf-8">
 
 <canvas width="350, 300"></canvas>
@@ -7,7 +14,22 @@
 	var tela = document.querySelector('canvas');
 	var pincel = tela.getContext('2d');
 
-	pincel.fillStyle = 'green';
+	// cabeça
+	pincel.fillStyle = 'darkgreen';
 	pincel.fillRect(200, 50, 350, 300);
+
+	// olhos
+	pincel.style = 'black';
+	pincel.fillRect(250, 110, 90, 90);
+	pincel.fillRect(410, 110, 90, 90);
+
+	// nariz
+	pincel.fillStyle(340, 200, 70,100);
+
+
+	// boaca ou barba
+	pincel.fillRect(300, 240, 40, 110);
+	pincel.fillRect(410, 240, 40, 110);
+
 
 </script>
