--- a/creeper.html
+++ b/creeper.html
@@ -7,27 +7,31 @@ O seu canvas deve ter o tamanho de 600 x 400 pixels. -->
 
 <meta charset="utf-8">
 
-<canvas width="350, 300"></canvas>
+<canvas width='600' height='400'></canvas>
 
 <script>
 	
 	var tela = document.querySelector('canvas');
 	var pincel = tela.getContext('2d');
 
-	// cabeça
 	pincel.fillStyle = 'darkgreen';
-	pincel.fillRect(200, 50, 350, 300);
+    pincel.fillRect(200,50,350,300);
 
 	// olhos
-	pincel.style = 'black';
-	pincel.fillRect(250, 110, 90, 90);
-	pincel.fillRect(410, 110, 90, 90);
+	pincel.fillStyle = 'black';
+    pincel.fillRect(250, 110, 90, 90);
+    pincel.fillRect(410, 110, 90, 90);
+
+
+	
 
 	// nariz
-	pincel.fillStyle(340, 200, 70,100);
+	// pincel.fillStyle = "black";
+	pincel.fillRect(340, 200, 70,100);
 
 
-	// boaca ou barba
+	// // boaca ou barba
+	// pincel.fillStyle ="black";
 	pincel.fillRect(300, 240, 40, 110);
 	pincel.fillRect(410, 240, 40, 110);
 
