--- a/programa.html
+++ b/programa.html
@@ -4,7 +4,7 @@
 
 <script>
 	
-	var tela = document.querySelector('canvas');;
+	var tela = document.querySelector('canvas');
 	var pincel = tela.getContext('2d');
 
 	// tela cinza
@@ -15,7 +15,7 @@
 	pincel.fillStyle = 'green';
 	pincel.fillRect(0, 0, 200, 400);
 
-	// retangulo vernelho
+	// retangulo vermelho
 	pincel.fillStyle = 'red';
 	pincel.fillRect(400, 0, 200, 400);
 
